--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Boosting/Selling</title>
+    <title>Oblivion</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
     <link rel="stylesheet" href="../stylesheets/styles.css">
