--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -70,10 +70,9 @@
         <div class="text-content">
             <p><b><u>Sepulcher of the First Ones [Mythic]</u><b></p>
             
-            <p>Disclaimer: Wir nehmen >u<ausschließlich>/u< Gold als Zahlung an (serverunabhängig)!</p>
+            <p>Disclaimer: Wir nehmen <u>ausschließlich</u> Gold als Zahlung an (serverunabhängig)!</p>
 
             <p>Die unten aufgelisteten Preise enthalten Personal-Loot! Gegen Aufpreis ist es ebenso möglich, zusätzliche Item-Trader zu buchen!</p>
-            <br/>
             <ul class="raid-schedule">
                 <li><span><u>Boss</u></span>                    <span><u>Preis</u></span></li>
                 <li><span>&#8226;&nbsp;Vigilant Guardian</span> <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
