--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -68,7 +68,7 @@
     
     <section class="main-content flex-col">
         <div class="text-content">
-            <p><b><u>Sepulcher of the First Ones [Mythic]</u><b></p>
+            <p><b><u>Sepulcher of the First Ones [Mythic]</u></b></p>
             
             <p>Disclaimer: Wir nehmen <u>ausschließlich</u> Gold als Zahlung an (serverunabhängig)!</p>
 
@@ -91,7 +91,7 @@
                 </li>
             </ul>
             <br/>
-            <p><b><u>Sanctum of Domination [Mythic]</u><b></p>
+            <p><b><u>Sanctum of Domination [Mythic]</u></b></p>
             <ul class="raid-schedule">
                 <li><span><u>Boss</u></span>                              <span><u>Preis</u></span></li>
                 <li><span>&#8226;&nbsp;Sylvanas Windrunner + Mount</span> <span>1700k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
