--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -75,9 +75,9 @@
             <p>Die unten aufgelisteten Preise enthalten Personal-Loot! Gegen Aufpreis ist es ebenso möglich, zusätzliche Item-Trader zu buchen!</p>
             <ul class="raid-schedule">
                 <li><span><u>Boss</u></span>                    <span><u>Preis</u></span></li>
-                <li><span>&#8226;&nbsp;Vigilant Guardian</span> <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
-                <li><span>&#8226;&nbsp;Skolex</span>            <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
-                <li><span>&#8226;&nbsp;Dausegne</span>          <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/vigilant_guardian.png">&nbsp;Vigilant Guardian</span><span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/skolex.png">&nbsp;Skolex</span>                      <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/dausegne.png">&nbsp;Dausegne</span>                  <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;Artificer Xy'mox</span>  <span>850k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;Prototype Pantheon</span><span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;Lihuvim</span>           <span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
