--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -78,16 +78,16 @@
                 <li><span>&#8226;&nbsp;<img src="../assets/media/icons/vigilant_guardian.png">&nbsp;Vigilant Guardian</span><span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;<img src="../assets/media/icons/skolex.png">&nbsp;Skolex</span>                      <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;<img src="../assets/media/icons/dausegne.png">&nbsp;Dausegne</span>                  <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
-                <li><span>&#8226;&nbsp;Artificer Xy'mox</span>  <span>850k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
-                <li><span>&#8226;&nbsp;Prototype Pantheon</span><span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
-                <li><span>&#8226;&nbsp;Lihuvim</span>           <span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
-                <li><span>&#8226;&nbsp;Halondrus</span>         <span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
-                <li><span>&#8226;&nbsp;Anduin Wrynn</span>      <span>2295k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
-                <li><span>&#8226;&nbsp;Lords of Dread</span>    <span>2550k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
-                <li><span>&#8226;&nbsp;Rygelon</span>           <span>3400k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
-                <li><span>&#8226;&nbsp;The Jailer</span>        <span>6800k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/xy'mox.png">&nbsp;Artificer Xy'mox</span>            <span>850k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/pantheon.png">&nbsp;Prototype Pantheon</span>        <span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/lihuvim.png">&nbsp;Lihuvim</span>                    <span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/halondrus.png">&nbsp;Halondrus</span>                <span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/anduin_wrynn.png">&nbsp;Anduin Wrynn</span>          <span>2295k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/lords_of_dread.png">&nbsp;Lords of Dread</span>      <span>2550k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/rygelon.png">&nbsp;Rygelon</span>                    <span>3400k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/jailer.png">&nbsp;The Jailer</span>                  <span>6800k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <br/>
-                <li><span>&#8226;&nbsp;Full Run + Mount</span>  <span>10625k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/sepulcher.png">&nbsp;Full Run + Mount</span>         <span>10625k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 </li>
             </ul>
             <br/>
