--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -94,7 +94,7 @@
             <p><b><u>Sanctum of Domination [Mythic]</u></b></p>
             <ul class="raid-schedule">
                 <li><span><u>Boss</u></span>                              <span><u>Preis</u></span></li>
-                <li><span>&#8226;&nbsp;Sylvanas Windrunner + Mount</span> <span>1700k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/sylvanas.png">&nbsp;Sylvanas Windrunner + Mount</span><span>1700k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 </li>
             </ul>
 
