--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -70,7 +70,8 @@
         <div class="text-content">
             <p><b><u>Sepulcher of the First Ones [Mythic]</u></b></p>
             
-            <p>Disclaimer: Wir nehmen <u>ausschließlich</u> Gold als Zahlung an (serverunabhängig)!</p>
+            <p>Disclaimer: Wir nehmen <u>ausschließlich</u> Gold als Zahlung an!</p>
+            <p>Es spielt hierbei keine Rolle, auf welchem Server ich bezahlen wollt!</p>
 
             <p>Die unten aufgelisteten Preise enthalten Personal-Loot! Gegen Aufpreis ist es ebenso möglich, zusätzliche Item-Trader zu buchen!</p>
             <ul class="raid-schedule">
