--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -73,7 +73,8 @@
             <p>Disclaimer: Wir nehmen <u>ausschließlich</u> Gold als Zahlung an!</p>
             <p>Es spielt hierbei keine Rolle, auf welchem Server ich bezahlen wollt!</p>
 
-            <p>Die unten aufgelisteten Preise enthalten Personal-Loot! Gegen Aufpreis ist es ebenso möglich, zusätzliche Item-Trader zu buchen!</p>
+            <p>Die unten aufgelisteten Preise enthalten Personal-Loot!
+               Gegen Aufpreis ist es ebenso möglich, zusätzliche Item-Trader zu buchen!</p>
             <ul class="boosting-prices">
                 <li><span><u>Boss</u></span>                    <span><u>Preis</u></span></li>
                 <li><span>&#8226;&nbsp;<img src="../assets/media/icons/vigilant_guardian.png">&nbsp;Vigilant Guardian</span><span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
