--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -95,7 +95,7 @@
             </ul>
             <br/>
             <p><b><u>Sanctum of Domination [Mythic]</u></b></p>
-            <ul class="raid-schedule">
+            <ul class="boosting-prices">
                 <li><span><u>Boss</u></span>                              <span><u>Preis</u></span></li>
                 <li><span>&#8226;&nbsp;<img src="../assets/media/icons/sylvanas.png">&nbsp;Sylvanas Windrunner + Mount</span><span>1700k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 </li>
