--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -71,7 +71,7 @@
             <p><b><u>Sepulcher of the First Ones [Mythic]</u></b></p>
             
             <p>Disclaimer: Wir nehmen <u>ausschließlich</u> Gold als Zahlung an!</p>
-            <p>Es spielt hierbei keine Rolle, auf welchem Server ich bezahlen wollt!</p>
+            <p>Es spielt hierbei keine Rolle, auf welchem Server ihr bezahlt!</p>
 
             <p>Die unten aufgelisteten Preise enthalten Personal-Loot!
             <br />
