--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -78,9 +78,9 @@
                Gegen Aufpreis ist es ebenso möglich, zusätzliche Item-Trader zu buchen!</p>
             <ul class="boosting-prices">
                 <li><span><u>Boss</u></span>                    <span><u>Preis</u></span></li>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/vigilant_guardian.png" style="margin-bottom: -2px">&nbsp;Vigilant Guardian</span>    <span>425k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/skolex.png" style="margin-bottom: -2px">&nbsp;Skolex</span>                          <span>425k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/dausegne.png" style="margin-bottom: -2px">&nbsp;Dausegne</span>                      <span>425k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/vigilant_guardian.png" style="margin-bottom: -2px">&nbsp;Vigilant Guardian</span>    <span>425k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/skolex.png" style="margin-bottom: -2px">&nbsp;Skolex</span>                          <span>425k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/dausegne.png" style="margin-bottom: -2px">&nbsp;Dausegne</span>                      <span>425k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
                 <li><span>&#8226;&nbsp;<img src="../assets/media/icons/xy'mox.png" style="margin-bottom: -2px">&nbsp;Artificer Xy'mox</span>                <span>850k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
                 <li><span>&#8226;&nbsp;<img src="../assets/media/icons/pantheon.png" style="margin-bottom: -2px">&nbsp;Prototype Pantheon</span>            <span>1275k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
                 <li><span>&#8226;&nbsp;<img src="../assets/media/icons/lihuvim.png" style="margin-bottom: -2px">&nbsp;Lihuvim</span>                        <span>1275k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
