--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -81,23 +81,23 @@
                 <li><span>&#8226;&nbsp;<img src="../assets/media/icons/vigilant_guardian.png" style="margin-bottom: -2px">&nbsp;Vigilant Guardian</span>    <span>425k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
                 <li><span>&#8226;&nbsp;<img src="../assets/media/icons/skolex.png" style="margin-bottom: -2px">&nbsp;Skolex</span>                          <span>425k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
                 <li><span>&#8226;&nbsp;<img src="../assets/media/icons/dausegne.png" style="margin-bottom: -2px">&nbsp;Dausegne</span>                      <span>425k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/xy'mox.png" style="margin-bottom: -2px">&nbsp;Artificer Xy'mox</span>                <span>850k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/pantheon.png" style="margin-bottom: -2px">&nbsp;Prototype Pantheon</span>            <span>1275k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/lihuvim.png" style="margin-bottom: -2px">&nbsp;Lihuvim</span>                        <span>1275k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/halondrus.png" style="margin-bottom: -2px">&nbsp;Halondrus</span>                    <span>1275k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/anduin_wrynn.png" style="margin-bottom: -2px">&nbsp;Anduin Wrynn</span>              <span>2295k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/lords_of_dread.png" style="margin-bottom: -2px">&nbsp;Lords of Dread</span>          <span>2550k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/rygelon.png" style="margin-bottom: -2px">&nbsp;Rygelon</span>                        <span>3400k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/jailer.png" style="margin-bottom: -2px">&nbsp;The Jailer</span>                      <span>6800k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/xy'mox.png" style="margin-bottom: -2px">&nbsp;Artificer Xy'mox</span>                <span>850k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/pantheon.png" style="margin-bottom: -2px">&nbsp;Prototype Pantheon</span>            <span>1275k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/lihuvim.png" style="margin-bottom: -2px">&nbsp;Lihuvim</span>                        <span>1275k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/halondrus.png" style="margin-bottom: -2px">&nbsp;Halondrus</span>                    <span>1275k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/anduin_wrynn.png" style="margin-bottom: -2px">&nbsp;Anduin Wrynn</span>              <span>2295k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/lords_of_dread.png" style="margin-bottom: -2px">&nbsp;Lords of Dread</span>          <span>2550k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/rygelon.png" style="margin-bottom: -2px">&nbsp;Rygelon</span>                        <span>3400k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/jailer.png" style="margin-bottom: -2px">&nbsp;The Jailer</span>                      <span>6800k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
                 <br/>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/sepulcher.png" style="margin-bottom: -2px">&nbsp;Full Run + Mount</span>             <span>10625k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/sepulcher.png" style="margin-bottom: -2px">&nbsp;Full Run + Mount</span>             <span>10625k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
                 </li>
             </ul>
             <br/>
             <p><b><u>Sanctum of Domination [Mythic]</u></b></p>
             <ul class="boosting-prices">
                 <li><span><u>Boss</u></span>                              <span><u>Preis</u></span></li>
-                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/sylvanas.png" style="margin-bottom: -2px">&nbsp;Sylvanas Windrunner + Mount</span>   <span>1700k &nbsp;<img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
+                <li><span>&#8226;&nbsp;<img src="../assets/media/icons/sylvanas.png" style="margin-bottom: -2px">&nbsp;Sylvanas Windrunner + Mount</span>   <span>1700k <img src="../assets/media/icons/gold.png" style="margin-bottom: -2px"></span></li>
                 </li>
             </ul>
 
