--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -73,9 +73,9 @@
 
             <p>Die unten aufgelisteten Preise enthalten Personal-Loot!
             <br />
-            Nach Absprache ist es ebenso möglich, zusätzliche Item-Trader zu buchen.            
+            Nach Absprache ist es ebenso möglich, zusätzliche Item-Trader zu buchen.</p>           
             <br />
-            Bei Interesse könnt ihr euch ingame bei Squallne (Squall#2200) melden.</p>
+            <p>Bei Interesse könnt ihr euch ingame bei Squallne (Squall#2200) melden.</p>
             <br />
             <p><b><u>Sepulcher of the First Ones [Mythic]</u></b></p>
             <ul class="boosting-prices">
