--- a/pages/roster.html
+++ b/pages/roster.html
@@ -62,6 +62,8 @@
                         class="emphasize material-icons md-18">navigate_next</i></a></li>
             <li><a href="/oblivionguild/pages/streams" class="flex-row"><span>STREAMS </span><i
                         class="material-icons md-18">navigate_next</i></a></li>
+            <li><a href="/oblivionguild/pages/boosting" class="flex-row"><span>BOOSTING </span><i
+                        class="material-icons md-18">navigate_next</i></a></li>
             <!--<li><a href="oblivionguild/pages/videos">Videos/</a></li>-->
             <li><a href="https://wago.io/p/squallne" target="_blank" rel="noopener noreferrer" class="flex-row"><span>WEAKAURAS</span><i
                         class="material-icons md-18">navigate_next</i></a></li>
