--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@
                             <th>Wipes</th>
                             <th>Date</th>
                         </tr>
+                            <td colspan="4" class="tier"><strong>Aberrus, the Shadowed Crucible</strong></td>
+                        </tr>
+                        <tr>
+                            <td class="world-rank">57</td>
+                            <td>Scalecommander Sarkareth</td>
+                            <td>147</td>
+                            <td>Jun 06, 2023</td>
+                            </tr>
+                        <tr>
+                            <td colspan="4" class="tier"><strong>Vault of the Incarnates</strong></td>
+                        </tr>
+                        <tr>
+                            <td class="world-rank">104</td>
+                            <td>Raszageth</td>
+                            <td>371</td>
+                            <td>Feb 05, 2023</td>
+                            </tr>
                         <tr>
                             <td colspan="4" class="tier"><strong>Sepulcher of the First Ones</strong></td>
                         </tr>
