--- a/pages/roster.html
+++ b/pages/roster.html
@@ -210,6 +210,7 @@
                 <img class="germany">
                 <strong class="shaman">KONTRAOS</strong>
                 <img class="class shaman">
+            </div>
             
             <div class="player-card">
                 <img class="germany">
@@ -221,6 +222,7 @@
                 <img class="germany">
                 <strong class="evoker">MIRAEV</strong>
                 <img class="class evoker">
+            </div>
             
             <div class="player-card">
                 <img class="germany">
