--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -72,6 +72,84 @@
     </nav>
 
     <section class="main-content tier-row flex-row" id="kill-count-table">
+                <!-- Vault -->
+        <div class="raid-tier" onclick="toggleTier(this)">
+            <img src="../assets/media/Tiers/VotI.png" height="80%" width="100%">
+            <div class="flex-col tier-content">
+                <p class="tier-name">Vault of the Incarnates</p>
+                <p class="world-rank">104</p>
+                <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
+                <i class="close-tier material-icons md-36 ">highlight_off</i>
+            </div>
+
+            <div class="tier-bosses">
+                <div id="boss-container" class="flex-col">
+                    <p>Raszageth the Storm-Eater</p>
+                    <p class="world-rank">104</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 370</p>
+                        <p class="subtitle">Feb 05, 2023</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Broodkeeper Diurna</p>
+                    <p class="world-rank">107</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 82</p>
+                        <p class="subtitle">Jan 12, 2023</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Dathea, Ascended</p>
+                    <p class="world-rank">97</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 45</p>
+                        <p class="subtitle">Jan 05, 2023</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Kurog Grimtotem</p>
+                    <p class="world-rank">64</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 72</p>
+                        <p class="subtitle">Jan 01, 2023</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Sennarth</p>
+                    <p class="world-rank">98</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 44</p>
+                        <p class="subtitle">Dez 27, 2022</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Terros</p>
+                    <p class="world-rank">49</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 30</p>
+                        <p class="subtitle">Dez 20, 2022</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>The Primal Council</p>
+                    <p class="world-rank">148</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 6</p>
+                        <p class="subtitle">Dez 18, 2022</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Eranog</p>
+                    <p class="world-rank">217</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 0</p>
+                        <p class="subtitle">Dez 18, 2022</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
         <!-- Sepulcher -->
         <div class="raid-tier" onclick="toggleTier(this)">
             <img src="../assets/media/Tiers/SoFO.png" height="80%" width="100%">
