--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -74,7 +74,7 @@
     <section class="main-content tier-row flex-row" id="kill-count-table">
                 <!-- Vault -->
         <div class="raid-tier" onclick="toggleTier(this)">
-            <img src="../assets/media/Tiers/VotI.png" height="80%" width="100%">
+            <img src="../assets/media/Tiers/VotI.png" height=auto width="100%">
             <div class="flex-col tier-content">
                 <p class="tier-name">Vault of the Incarnates</p>
                 <p class="world-rank">104</p>
