--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -72,6 +72,94 @@
     </nav>
 
     <section class="main-content tier-row flex-row" id="kill-count-table">
+                        <!-- Aberrus -->
+        <div class="raid-tier" onclick="toggleTier(this)">
+            <img src="../assets/media/Tiers/Aberrus.png" height="auto" width="100%">
+            <div class="flex-col tier-content">
+                <p class="tier-name">Aberrus, the Shadowed Crucible</p>
+                <p class="world-rank">57</p>
+                <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
+                <i class="close-tier material-icons md-36 ">highlight_off</i>
+            </div>
+
+            <div class="tier-bosses">
+                <div id="boss-container" class="flex-col">
+                    <p>Scalecommander Sarkareth</p>
+                    <p class="world-rank">57</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 146</p>
+                        <p class="subtitle">Jun 06, 2023</p>
+                    </div>
+                </div>
+
+            <div class="tier-bosses">
+                <div id="boss-container" class="flex-col">
+                    <p>Echo of Neltharion</p>
+                    <p class="world-rank">53</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 83</p>
+                        <p class="subtitle">May 29, 2023</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Magmorax</p>
+                    <p class="world-rank">43</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 16</p>
+                        <p class="subtitle">May 22, 2023</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>The Vigilant Steward, Zskarn</p>
+                    <p class="world-rank">57</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 40</p>
+                        <p class="subtitle">May 22, 2023</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Rashok, the Elder</p>
+                    <p class="world-rank">70</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 59</p>
+                        <p class="subtitle">May 18, 2023</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>The Forgotten Experiments</p>
+                    <p class="world-rank">59</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 6</p>
+                        <p class="subtitle">May 14, 2023</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>The Amalgamation Chamber</p>
+                    <p class="world-rank">192</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 0</p>
+                        <p class="subtitle">May 14, 2023</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Assault of the Zaqali</p>
+                    <p class="world-rank">289</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 1</p>
+                        <p class="subtitle">May 14, 2023</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Kazzara, the Hellforged</p>
+                    <p class="world-rank">514</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: 0</p>
+                        <p class="subtitle">May 14, 2023</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
                 <!-- Vault -->
         <div class="raid-tier" onclick="toggleTier(this)">
             <img src="../assets/media/Tiers/VotI.png" height="auto" width="100%">
@@ -120,7 +208,7 @@
                     <p class="world-rank">98</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 44</p>
-                        <p class="subtitle">Dez 27, 2022</p>
+                        <p class="subtitle">Dec 27, 2022</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
@@ -128,7 +216,7 @@
                     <p class="world-rank">49</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 30</p>
-                        <p class="subtitle">Dez 20, 2022</p>
+                        <p class="subtitle">Dec 20, 2022</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
@@ -136,7 +224,7 @@
                     <p class="world-rank">148</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 6</p>
-                        <p class="subtitle">Dez 18, 2022</p>
+                        <p class="subtitle">Dec 18, 2022</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
@@ -144,7 +232,7 @@
                     <p class="world-rank">217</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: 0</p>
-                        <p class="subtitle">Dez 18, 2022</p>
+                        <p class="subtitle">Dec 18, 2022</p>
                     </div>
                 </div>
             </div>
@@ -1634,246 +1722,6 @@
                     </div>
                 </div>
 
-            </div>
-        </div>
-
-        <!-- Siege of Orgrimmar -->
-        <div class="raid-tier" onclick="toggleTier(this)">
-            <img src="../assets/media/Tiers/SoO.png" height="auto" width="100%">
-            <div class="flex-col tier-content">
-                <p class="tier-name">Siege of Orgrimmar</p>
-                <p class="world-rank">-</p>
-                <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
-                <i class="close-tier material-icons md-36 ">highlight_off</i>
-            </div>
-
-            <div class="tier-bosses">
-                <div id="boss-container" class="flex-col">
-                    <p>Garrosh Hellscream (25)</p>
-                    <a href=https://www.youtube.com/watch?v=u1iIAce12p8 target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
-
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Nov 25, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Thok the Bloodthirsty</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Oct 10, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Paragons of the Klaxxi</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Nov 11, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Siegecrafter Blackfuse</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Oct 20, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Spoils of Pandaria</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Oct 6, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Malkorok</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Oct 2, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>General Nazgrim</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Sep 26, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Iron Juggernaut</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Sep 22, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Galakras</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Sep 19, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Sha of Pride</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Sep 19, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Norushen</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Sep 18, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Fallen Protectors</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Sep 18, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Immerseus</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Sep 18, 2013</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <!-- Throne of Thunder -->
-        <div class="raid-tier" onclick="toggleTier(this)">
-            <img src="../assets/media/Tiers/ToT.png" height="auto" width="100%">
-            <div class="flex-col tier-content">
-                <p class="tier-name">Throne of Thunder</p>
-                <p class="world-rank">-</p>
-                <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
-                <i class="close-tier material-icons md-36 ">highlight_off</i>
-            </div>
-
-            <div class="tier-bosses">
-                <div id="boss-container" class="flex-col">
-                    <p>Ra'den</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Jun 03, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Lei Shen</p>
-                    <p class="world-rank">-</p>
-                    <a href=https://www.youtube.com/watch?v=SsNdRSE-XJA target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Jun 02, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Dark Animus</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">May 02, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Durumu the Forgotten</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Apr 14, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Megaera</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Mar 28, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Twin Consorts</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Apr 28, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Iron Qon</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Apr 21, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Primordius</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Apr 18, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Council of Elders</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Mar 24, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Horridon</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Mar 17, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Ji-Kun</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Mar 31, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Tortos</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Mar 27, 2013</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Jin'rokh the Breaker</p>
-                    <p class="world-rank">-</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Mar 13, 2013</p>
-                    </div>
-                </div>
             </div>
         </div>
 
