--- a/pages/roster.html
+++ b/pages/roster.html
@@ -43,7 +43,7 @@
             </li>
 
             <li>
-                <a href=https://www.warcraftlogs.com/guild/calendar/56317 target="_blank" rel="noopener noreferrer"><img
+                <a href=https://www.warcraftlogs.com/guild/id/563170 target="_blank" rel="noopener noreferrer"><img
                         class="icon" src="../assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></a>
             </li>
         </ul>
