--- a/pages/roster.html
+++ b/pages/roster.html
@@ -122,6 +122,12 @@
                 <img class="class priest">
             </div>
 
+            <div class="player-card">
+                <img class="germany">
+                <strong class="shaman">RENEGADE</strong>
+                <img class="class shaman">
+            </div>
+
         </div>
 
         <h2 class="roster-header display-desktop">DPS:</h2>
